--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@inertiajs/inertia": "^0.6.3",
     "@inertiajs/inertia-vue3": "^0.2.1",
     "@inertiajs/progress": "^0.1.2",
-    "@tailwindcss/typography": "^0.2.0",
-    "@tailwindcss/ui": "^0.6.2",
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
     "@vue/compiler-sfc": "^3.0.2",
     "animejs": "^3.2.1",
     "babel-plugin-prismjs": "^1.0.2",
@@ -23,14 +23,12 @@
     "eslint": "^5.14.1",
     "eslint-plugin-vue": "^5.2.2",
     "laravel-mix": "^v6.0.0-beta.10",
-    "postcss": "^8.1.4",
-    "postcss-import": "^12.0.1",
-    "postcss-nesting": "^7.0.0",
+    "postcss": "^8.2.10",
     "prismjs": "^1.22.0",
     "puppeteer": "^2.1.1",
-    "sass": "^1.28.0",
-    "sass-loader": "^7.3.1",
-    "tailwindcss": "^1.9.6",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "tailwindcss": "^2.1.1",
     "vue": "^3.0.2",
     "vue-loader": "^16.0.0-beta.8",
     "vue-meta": "^2.4.0"
