--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": ">=7.3",
+    "php": "^7.4",
     "calebporzio/sushi": "^2.1",
     "coconutcraig/laravel-postmark": "^2.9",
     "cviebrock/eloquent-sluggable": "^8.0.1",
