Add factories to composer autoload

--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
       "app/Utilities/helpers.php"
     ],
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/"
     }
   },
   "autoload-dev": {
