uncomment test step for github workflow

--- a/.github/workflows/php_test.yml
+++ b/.github/workflows/php_test.yml
@@ -35,6 +35,5 @@ jobs:
       - name: Generate key
         run: php artisan key:generate
  
-      # Tests don't work yet
-      #- name: Run test suite
-      #  run: ./vendor/bin/phpunit tests --verbose
+      - name: Run test suite
+       run: ./vendor/bin/phpunit tests --verbose
