--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,6 @@
     "spatie/laravel-cookie-consent": "^2.11",
     "spatie/laravel-honeypot": "^2.1",
     "spatie/laravel-medialibrary": "^8",
-    "spatie/laravel-ray": "dev-master",
     "spatie/laravel-sitemap": "^5.6",
     "tedivm/jshrink": "^1.3",
     "tightenco/ziggy": "^0.8.0",
@@ -49,7 +48,8 @@
     "fakerphp/faker": "^1.9.1",
     "mockery/mockery": "^1.4.2",
     "nunomaduro/collision": "^5.0",
-    "phpunit/phpunit": "^9.3.3"
+    "phpunit/phpunit": "^9.3.3",
+    "spatie/laravel-ray": "dev-master"
   },
   "autoload": {
     "classmap": [
