--- a/.github/workflows/php_test.yml
+++ b/.github/workflows/php_test.yml
@@ -34,6 +34,15 @@ jobs:
         
       - name: Generate key
         run: php artisan key:generate
+        
+      - name: Setup NPM
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          check-latest: true
+
+      - name: Run npm install
+        run: npm install
  
       - name: Run test suite
         run: ./vendor/bin/phpunit tests --verbose
