--- a/.github/workflows/php_test.yml
+++ b/.github/workflows/php_test.yml
@@ -43,6 +43,9 @@ jobs:
 
       - name: Run npm install
         run: npm install
+      
+      - name: Run npm run prod
+        run: npm run prod
  
       - name: Run test suite
         run: ./vendor/bin/phpunit tests --verbose
