--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,17 @@
 {
   "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    ["prismjs", {
-      "languages": ["php"],
-      "plugins": ["line-numbers", "line-highlight"],
-      "css": true
-    }]
+    [
+      "prismjs",
+      {
+        "languages": [
+          "php"
+        ],
+        "plugins": [
+          "line-numbers",
+          "line-highlight"
+        ],
+        "css": true
+      }
+    ]
   ]
 }
