--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "fruitcake/laravel-cors": "^2.0",
     "google/recaptcha": "~1.1",
     "guzzlehttp/guzzle": "^6.2",
-    "inertiajs/inertia-laravel": "^0.3",
+    "inertiajs/inertia-laravel": "^v0.4.1",
     "kblais/laravel-uuid": "^1.1",
     "laravel-notification-channels/webhook": "^2.2",
     "laravel/framework": "^8.0",
