--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-meta": "^2.4.0"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "vue-toastification": "^2.0.0-beta.7"
   }
 }
