--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": "^7.4",
+    "php": "^8.0",
     "calebporzio/sushi": "^2.1",
     "coconutcraig/laravel-postmark": "^2.9",
     "cviebrock/eloquent-sluggable": "^8.0.1",
@@ -16,26 +16,28 @@
     "filament/filament": "^1.9",
     "fruitcake/laravel-cors": "^2.0",
     "google/recaptcha": "~1.1",
-    "guzzlehttp/guzzle": "^6.2",
+    "guzzlehttp/guzzle": "^7.3",
     "inertiajs/inertia-laravel": "^v0.4.1",
     "kblais/laravel-uuid": "^1.1",
     "laravel-notification-channels/webhook": "^2.2",
     "laravel/framework": "^8.0",
     "laravel/helpers": "^1.1",
     "laravel/horizon": "^5",
+    "laravel/octane": "^1.0",
     "laravel/slack-notification-channel": "^2.0",
     "laravel/socialite": "^5",
     "laravel/tinker": "^2.0",
     "laravel/ui": "^3.2",
     "predis/predis": "~1.0",
     "reinink/remember-query-strings": "^0.1.0",
-    "renatomarinho/laravel-page-speed": "^1.8",
+    "renatomarinho/laravel-page-speed": "^2.0",
     "spatie/browsershot": "^3.4",
     "spatie/eloquent-sortable": "^3.0",
     "spatie/laravel-cookie-consent": "^2.11",
-    "spatie/laravel-honeypot": "^2.1",
+    "spatie/laravel-honeypot": "^4.0",
     "spatie/laravel-medialibrary": "^8",
-    "spatie/laravel-sitemap": "^5.6",
+    "spatie/laravel-sitemap": "^6.0.4",
+    "spiral/roadrunner": "^2.0",
     "tedivm/jshrink": "^1.3",
     "tightenco/ziggy": "^0.8.0",
     "tucker-eric/eloquentfilter": "^2.2"
@@ -48,8 +50,7 @@
     "fakerphp/faker": "^1.9.1",
     "mockery/mockery": "^1.4.2",
     "nunomaduro/collision": "^5.0",
-    "phpunit/phpunit": "^9.3.3",
-    "spatie/laravel-ray": "dev-master"
+    "phpunit/phpunit": "^9.3.3"
   },
   "autoload": {
     "classmap": [
