--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "production": "mix --production"
   },
   "devDependencies": {
-    "@inertiajs/inertia": "^0.8.7",
-    "@inertiajs/inertia-vue3": "^0.3.14",
-    "@inertiajs/progress": "^0.2.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@inertiajs/inertia": "^0.10.1",
+    "@inertiajs/inertia-vue3": "^0.5.2",
+    "@inertiajs/progress": "^0.2.6",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "@vue/compiler-sfc": "^3.0.2",
@@ -28,13 +29,10 @@
     "resolve-url-loader": "^3.1.3",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
-    "tailwindcss": "^2.1.1",
+    "tailwindcss": "^2.2.16",
     "vue": "^3.0.11",
     "vue-loader": "^16.2.0",
-    "vue-meta": "^2.4.0"
-  },
-  "dependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "vue-meta": "^2.4.0",
     "vue-toastification": "^2.0.0-beta.7"
   }
 }
