--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
     "guzzlehttp/guzzle": "^7.3",
     "inertiajs/inertia-laravel": "^v0.4.4",
     "kblais/laravel-uuid": "^1.1",
+    "kreait/firebase-php": "5.19",
+    "laravel-notification-channels/fcm": "^2.2.1",
     "laravel-notification-channels/webhook": "^2.2",
     "laravel/framework": "^8.0",
     "laravel/helpers": "^1.1",
