Added option to disable registration.

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,5 @@ STRIPE_KEY=your-stripe-key
 STRIPE_SECRET=your-stripe-secret
 STRIPE_STARTER_ID=
 STRIPE_UNLIMITED_ID=
+
+AUTH_REGISTER_ENABLED=true
