--- a/.github/workflows/php_test.yml
+++ b/.github/workflows/php_test.yml
@@ -42,4 +42,4 @@ jobs:
         run: npm run prod
  
       - name: Run test suite
-        run: ./vendor/bin/pest --coverage
+        run: ./vendor/bin/pest
