:anchor: Try to fix --coverage by adding xdebug mode
Signed-off-by: Lloric Mayuga Garcia <lloricode@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -92,7 +92,8 @@
     ],
     "format": [
       "vendor/bin/php-cs-fixer fix"
-    ]
+    ],
+    "pest-coverage": "XDEBUG_MODE=coverage vendor/bin/pest --coverage"
   },
   "config": {
     "preferred-install": "dist",
