Revert ":anchor: Try to fix --coverage by adding xdebug mode"
This reverts commit ca87aba9028882eac391d95b6be267f0e9341c44.

--- a/.github/workflows/php_test.yml
+++ b/.github/workflows/php_test.yml
@@ -42,4 +42,4 @@ jobs:
         run: npm run prod
  
       - name: Run test suite
-        run: composer pest-coverage
+        run: ./vendor/bin/pest
