--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "spatie/laravel-cookie-consent": "^2.11",
     "spatie/laravel-honeypot": "^4.0",
     "spatie/laravel-medialibrary": "^8",
+    "spatie/laravel-ray": "^1.26",
     "spatie/laravel-sitemap": "^6.0.4",
     "spiral/roadrunner": "^2.0",
     "tedivm/jshrink": "^1.3",
