--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "php": "^8.1",
     "calebporzio/sushi": "^2.1",
     "cviebrock/eloquent-sluggable": "^9.0.0",
+    "doctrine/dbal": "^3.5",
     "filament/filament": "^2.5",
     "google/recaptcha": "~1.1",
     "guzzlehttp/guzzle": "^7.3",
