Should email exceptions

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 MINIMAL_FRONTEND=false
+SHOULD_EMAIL_EXCEPTIONS=true
 
 CASHIER_MODEL=App\Models\User
 
